base/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: bipin
  namespace: family-kustomize
spec:
  type: ClusterIP
  selector:
    name: bipin
  ports:
  - port: 80
