base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
  name: family-bipin
  namespace: family-kustomize
spec:
  rules:
  - host: family-bipin-prod.k8s1.bjethwan.xyz
    http:
      paths:
      - backend:
          serviceName: bipin
          servicePort: 80
        path: /
